--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, inventore debitis asperiores culpa delectus atque explicabo earum nobis voluptatum deserunt illum quia? Vitae nisi molestias deserunt, facilis nihil voluptatibus sequi!
                 </p>
             </div>
-            <img class="event__image" src="./images/ui-ux.png" alt="ui-ux">
+            <img class="event__image" src="./images/ui-ux.png" alt="UI/UX">
         </div>
     </section>
     <section class="event event--data-science">
@@ -72,7 +72,7 @@
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, inventore debitis asperiores culpa delectus atque explicabo earum nobis voluptatum deserunt illum quia? Vitae nisi molestias deserunt, facilis nihil voluptatibus sequi!
                 </p>
             </div>
-            <img class="event__image" src="./images/data.png" alt="data-science">
+            <img class="event__image" src="./images/data.png" alt="Data Science">
         </div>
     </section>
     <section class="event event--backend event--image-left">
@@ -83,7 +83,7 @@
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, inventore debitis asperiores culpa delectus atque explicabo earum nobis voluptatum deserunt illum quia? Vitae nisi molestias deserunt, facilis nihil voluptatibus sequi!
                 </p>
             </div>
-            <img class="event__image" src="./images/backend.png" alt="backend">
+            <img class="event__image" src="./images/backend.png" alt="Back-end">
         </div>
     </section>
 
